--- a/src/components/clients/modal.css
+++ b/src/components/clients/modal.css
@@ -1,6 +1,6 @@
 .modalStyle .ant-modal-header {
     border-radius:  0 0 ;
-    background-color: #0d6efd;
+    background-color: #1890ff;
     height: 45px;
     text-decoration-color: rgb(228, 227, 225);
     
