--- a/src/components/clients/modal.css
+++ b/src/components/clients/modal.css
@@ -1,7 +1,8 @@
 .modalStyle .ant-modal-header {
-    border-radius:  0 0 ;
+    border-radius:  10px 10px;
     background-color: #1890ff;
     height: 45px;
     text-decoration-color: rgb(228, 227, 225);
+
     
   }
