--- a/src/components/clients/modal.css
+++ b/src/components/clients/modal.css
@@ -1,5 +1,5 @@
 .modalStyle .ant-modal-header {
-    border-radius:  10px 10px;
+    border-radius:  0 0;
     background-color: #1890ff;
     height: 45px;
     text-decoration-color: rgb(228, 227, 225);
